Removed transforms.  No user-facing boxing.
Former-commit-id: 64e2ef58078eb9066eff76656cffaa2e0db91b44