@@ -692,7 +692,7 @@ literal|true
 argument_list|,
 name|exec
 argument_list|(
-literal|"return new Long(3) == new Long(3);"
+literal|"return Long.valueOf(3) == 3L;"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1113,7 +1113,7 @@ literal|1
 argument_list|,
 name|exec
 argument_list|(
-literal|"Integer a = new Integer(1); Integer b = 1; if (a !== b) return 1; else return 0;"
+literal|"def a = 1; def b = 1; if (a !== b) return 1; else return 0;"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1123,7 +1123,7 @@ literal|1
 argument_list|,
 name|exec
 argument_list|(
-literal|"Character a = (char)'a'; Character b = new Character((char)'a'); if (a !== b) return 1; else return 0;"
+literal|"def a = (char)'a'; Character b = new Character((char)'a'); if (a !== b) return 1; else return 0;"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1133,7 +1133,7 @@ literal|0
 argument_list|,
 name|exec
 argument_list|(
-literal|"Character a = (char)'a'; Object b = a; if (a !== b) return 1; else return 0;"
+literal|"def a = (char)'a'; Object b = a; if (a !== b) return 1; else return 0;"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1143,7 +1143,7 @@ literal|0
 argument_list|,
 name|exec
 argument_list|(
-literal|"Integer a = 1; Number b = a; Number c = a; if (c !== b) return 1; else return 0;"
+literal|"def a = 1; Number b = a; Number c = a; if (c !== b) return 1; else return 0;"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1153,7 +1153,7 @@ literal|1
 argument_list|,
 name|exec
 argument_list|(
-literal|"Integer a = 1; Character b = (char)'a'; if (a !== (Object)b) return 1; else return 0;"
+literal|"def a = 1; Character b = (char)'a'; if (a !== (Object)b) return 1; else return 0;"
 argument_list|)
 argument_list|)
 expr_stmt|;
